--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Install Python Requirements
         working-directory: main
         run: python3 -m pip install -r requirements.txt
+        continue-on-error: true
 
       - name: Update Processor Docs
         working-directory: main/Scripts
