--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,19 +22,14 @@ jobs:
         run: python3 -m pip install -r requirements.txt
         continue-on-error: true
 
+      - name: Configure Git
+        working-directory: main
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+
       - name: Update Processor Docs
         working-directory: main/Scripts
         # env:
         #   PA_TOKEN: ${{ secrets.PAT_SECRET }}
         run: python3 generate_processor_docs.py "0.0.0"
-
-      # - name: Commit index
-      #   working-directory: main
-      #   env:
-      #     PA_TOKEN: ${{ secrets.PAT_SECRET }}
-      #   run: |
-      #     git config user.name github-actions
-      #     git config user.email github-actions@github.com
-      #     git add index.json || true
-      #     git commit -m "Rebuild index" index.json || true
-      #     git push --set-upstream origin main || true
