--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,6 @@ jobs:
         # env:
         #   PA_TOKEN: ${{ secrets.PAT_SECRET }}
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
           python3 generate_processor_docs.py "0.0.0"
